components/demo/serving/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serving
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: openshift
    app.openshift.io/vcs-uri: https://github.com/redhat-na-ssa/demo-active-learning.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"serving:latest","namespace":"demo-active-learn"},"fieldPath":"spec.template.spec.containers[?(@.name==\"serving\")].image","pause":"false"}]'
  generation: 2
  labels:
    app: serving
    app.kubernetes.io/component: serving
    app.kubernetes.io/instance: serving
    app.kubernetes.io/name: serving
    app.kubernetes.io/part-of: active-learning
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serving
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: serving
        deployment: serving
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo-active-learn/serving:latest
        name: serving
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
