components/demo/serving/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving
  annotations:
    app.openshift.io/vcs-ref: openshift
    app.openshift.io/vcs-uri: https://github.com/redhat-na-ssa/demo-active-learning.git
  labels:
    app: serving
    app.kubernetes.io/component: serving
    app.kubernetes.io/instance: serving
    app.kubernetes.io/name: serving
    app.kubernetes.io/part-of: active-learning
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: serving
    deployment: serving
  sessionAffinity: None
  type: ClusterIP
