components/demo/serving/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: serving
  labels:
    app: serving
    app.kubernetes.io/component: serving
    app.kubernetes.io/instance: serving
    app.kubernetes.io/name: serving
    app.kubernetes.io/part-of: active-learning
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: serving
    weight: 100
  wildcardPolicy: None
